raffia/tests/error/scss/at-rule/use/with-before-as.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `<ident>`
  ┌─ with-before-as.scss:1:27
  │
1 │ @use "other" with ($a: b) as c;
  │                           ^^


